@@ -252,6 +252,19 @@ gdbscm_objfile_filename (SCM self)
   return gdbscm_scm_from_c_string (objfile_name (o_smob->objfile));
 }
 
+/* (objfile-progspace <gdb:objfile>) -> <gdb:progspace>
+   Returns the objfile's progspace.
+   Throw's an exception if the underlying objfile is invalid.  */
+
+static SCM
+gdbscm_objfile_progspace (SCM self)
+{
+  objfile_smob *o_smob
+    = ofscm_get_valid_objfile_smob_arg_unsafe (self, SCM_ARG1, FUNC_NAME);
+
+  return psscm_scm_from_pspace (o_smob->objfile->pspace);
+}
+
 /* (objfile-pretty-printers <gdb:objfile>) -> list
    Returns the list of pretty-printers for this objfile.  */
 
@@ -387,6 +400,10 @@ Return #t if the objfile is valid (hasn't been deleted from gdb)." },
   { "objfile-filename", 1, 0, 0, gdbscm_objfile_filename,
     "\
 Return the file name of the objfile." },
+
+  { "objfile-progspace", 1, 0, 0, gdbscm_objfile_progspace,
+    "\
+Return the progspace that the objfile lives in." },
 
   { "objfile-pretty-printers", 1, 0, 0, gdbscm_objfile_pretty_printers,
     "\
