@@ -48,6 +48,9 @@ gdb_test "gu (print (->bool (or-map (lambda (o) (string-contains (objfile-filena
 gdb_test "gu (print (objfile-pretty-printers objfile))" \
     "= \\(\\)"
 
+gdb_test "gu (print (eq? (current-progspace) (objfile-progspace objfile)))" \
+    "= #t"
+
 gdb_test "guile (set-objfile-pretty-printers! objfile 0)" \
     "ERROR: .*: Wrong type argument in position 2 \\(expecting list\\): 0.*"
 
